[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jgke@jgke.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
num = "0.3"
itertools = "0.9.0"
rayon = "1.5.1"
scanf = "1.2.1"
bitvec = "1.0.1"
